--- a/baseline_trials/AttentionCheckPage.html
+++ b/baseline_trials/AttentionCheckPage.html
@@ -57,9 +57,9 @@
     $(document).ready(function () {
 
         //Actions on click: ALTERNATIVE NORM MEASURE
-        $('.comprehension_option').on('click', function () {
+        $('.comprehension-option').on('click', function () {
             // Remove 'selected' class from all buttons
-            $(this).closest('.comprehension-row').find('.comprehension_option').removeClass('selected');
+            $(this).closest('.comprehension-row').find('.comprehension-option').removeClass('selected');
 
             // Add 'selected' class to the clicked button
             $(this).addClass('selected');
@@ -127,98 +127,6 @@
     });
 
 </script>
-
-
-    <style>
-
-    .comprehension-row {
-        display: flex;
-        flex-direction: column; /* Stack items vertically */
-        justify-content: center; /* Center the items */
-        margin-top: 0vw; /* Adjust the top margin */
-        gap: 0.5vw; /* Space between items */
-    }
-
-    .comprehension-row-close {
-        justify-content: center;
-        display: flex;
-        margin-top:3vw;
-        /*gap: 1vw; PREVIOUS GAP WITH 30 ENDOWMENT !* Space between numbers scales with viewport width *!*/
-        gap: 0vw; /* Space between numbers scales with viewport width */
-        flex-wrap: wrap; /* Optional: allows wrapping if buttons exceed container width */
-        align-items: center; /* Ensures proper vertical alignment */
-    }
-
-    .comprehension-row-static {
-        justify-content: center;
-        display: flex;
-        margin-top:-2vw;
-        /*gap: 1vw; PREVIOUS GAP WITH 30 ENDOWMENT !* Space between numbers scales with viewport width *!*/
-        gap: 0.5vw; /* Space between numbers scales with viewport width */
-        flex-wrap: wrap; /* Optional: allows wrapping if buttons exceed container width */
-        align-items: center; /* Ensures proper vertical alignment */
-    }
-
-    .comprehension_option {
-        width: 90%; /* Width scales with viewport width */
-        height: 3vw; /* Height scales with viewport width */
-        flex-direction: column;
-        text-align: center; /* Center-aligns the text */
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 0.9vw; /* Font size scales with viewport width */
-        background-color: #e0e0e0;
-        border: 2px solid #000000;
-        border-radius: 6px; /* Slightly rounded corners */
-        cursor: pointer;
-        font-family: Arial, Helvetica, sans-serif;
-        transition: background-color 0.3s ease;
-    }
-
-    .comprehension_option:hover {
-        background-color: #ffcc00; /* Change background color on hover */
-    }
-
-    .comprehension_option:active {
-        background-color: #ffa500; /* Change background color on click */
-    }
-
-    .comprehension_option.selected {
-             background-color: #ffa500; /* Permanent color when clicked */
-    }
-
-    .comprehension_option.disabled {
-        background-color: #F3F3F3; /* Grey color for disabled buttons */
-        border: 2px solid #d3d3d3;
-        color:#d3d3d3;
-        cursor: not-allowed;
-        pointer-events: none; /* Disable interactions */
-    }
-
-    .comprehension-error-red {
-        color: #a94442; /* Bootstrap default error text color (dark red) */
-        background-color: #f2dede; /* Light red background */
-        border: 1px solid #ebccd1; /* Red border */
-        padding: 10px; /* Padding for spacing */
-        border-radius: 4px; /* Slightly rounded corners */
-        margin-bottom: 15px; /* Spacing below the error */
-        display: none; /* Initially hidden */
-        /*font-size: 14px;*/
-    }
-
-    .comprehension-error-green {
-        color: green; /* Bootstrap default error text color (dark red) */
-        background-color: lightgreen; /* Light red background */
-        border: 1px solid green; /* Red border */
-        padding: 10px; /* Padding for spacing */
-        border-radius: 4px; /* Slightly rounded corners */
-        margin-bottom: 15px; /* Spacing below the error */
-        display: none; /* Initially hidden */
-        /*font-size: 14px;*/
-    }
-
-</style>
 </head>
 
 
@@ -255,21 +163,21 @@
 
     <div class="figure-container">
 
-            <img class="scenario_image" alt="figure with characters giving or receiver coins" src="/static/global/treatments/3PP punish.png">
+        <img class="scenario_image" alt="figure with characters giving or receiver coins" src="/static/global/treatments/3PP punish.png">
 
-            <div class="person-a">
-                <b>PERSON A</b>
-            </div>
-            <div class="person-b">
-                <b>PERSON B</b>
-            </div>
-            <div class="person-c">
-                <b>PERSON C</b>
-            </div>
-
-            <img class="minus-button-3PP" src="/static/global/minus_button2.png" alt="-">
-
+        <div class="person-a">
+            <b>PERSON A</b>
         </div>
+        <div class="person-b">
+            <b>PERSON B</b>
+        </div>
+        <div class="person-c">
+            <b>PERSON C</b>
+        </div>
+
+        <img class="minus-button-3PP" src="/static/global/minus_button2.png" alt="-">
+
+    </div>
 
 
     {% if player.round_number == attention_round1 %}
@@ -280,10 +188,10 @@
 
             <div class='numbers'>
                 <div class="comprehension-row" data-input="selected-attention1">
-                    <div class="comprehension_option" data-value="0" >2 points </div>
-                    <div class="comprehension_option" data-value="1" >0 points </div>
-                    <div class="comprehension_option" data-value="2" >6 points </div>
-                    <div class="comprehension_option" data-value="3" >4 points </div>
+                    <div class="comprehension-option" data-value="0" >2 points </div>
+                    <div class="comprehension-option" data-value="1" >0 points </div>
+                    <div class="comprehension-option" data-value="2" >6 points </div>
+                    <div class="comprehension-option" data-value="3" >4 points </div>
                 </div>
             </div>
 
@@ -299,10 +207,10 @@
 
             <div class='numbers'>
                 <div class="comprehension-row" data-input="selected-attention2">
-                    <div class="comprehension_option" data-value="0" >4 points </div>
-                    <div class="comprehension_option" data-value="1" >2 points </div>
-                    <div class="comprehension_option" data-value="2" >0 points </div>
-                    <div class="comprehension_option" data-value="3" >6 points </div>
+                    <div class="comprehension-option" data-value="0" >4 points </div>
+                    <div class="comprehension-option" data-value="1" >2 points </div>
+                    <div class="comprehension-option" data-value="2" >0 points </div>
+                    <div class="comprehension-option" data-value="3" >6 points </div>
                 </div>
             </div>
 
