rule following and 2PP done. Crowding out is pain

--- a/rule_following/RuleFollowing.html
+++ b/rule_following/RuleFollowing.html
@@ -19,28 +19,14 @@
 
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'shared_styles.css' %}">
+
     <style>
-
-        body {
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin-top: 4vw;
-            background-color: #f4f4f4;
-        }
-
-        .responsive-div {
-            width: 90%; /* Default width */
-            transform-origin: top left; /* Ensure scaling starts from top-left */
-            transform: scale(1); /* Default scale */
-            transition: transform 0.3s ease; /* Smooth scaling */
-            border:0px solid black;
-            margin-left:auto;
-            margin-right:auto;
-        }
 
         .wrapper {
           display: grid;
