--- a/crowding_out/DescriptiveNormPage.html
+++ b/crowding_out/DescriptiveNormPage.html
@@ -21,9 +21,10 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'shared_styles.css' %}">
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 <script>
 
