small fixes in TPP page

--- a/baseline_trials/TPPage.html
+++ b/baseline_trials/TPPage.html
@@ -522,7 +522,7 @@
 
     <form method="post">
 
-        {% if "norm" in player.treatment %}
+    {% if "norm" in player.treatment %}
 
         <input type="hidden" name="TP_norm_decision1" id="selected-norm-1">
 
@@ -536,7 +536,7 @@
 
             {% endif %}
 
-        {% else %}
+    {% else %}
 
         <!-- Add hidden input to store the selected value -->
         <input type="hidden" name="TP_decision1" id="selected-number-1">
@@ -547,21 +547,21 @@
 <!--        {{ formfield_errors 'TP_decision2' }}-->
 <!--        {{ formfield_errors 'TP_decision3' }}-->
 
-            {% if "comp" in player.treatment %}
+        {% if "comp" in player.treatment %}
 
-            <input type="hidden" name="punish_or_compensate1" id="selected-action-1">
-            <input type="hidden" name="punish_or_compensate2" id="selected-action-2">
-            <input type="hidden" name="punish_or_compensate3" id="selected-action-3">
+        <input type="hidden" name="punish_or_compensate1" id="selected-action-1">
+        <input type="hidden" name="punish_or_compensate2" id="selected-action-2">
+        <input type="hidden" name="punish_or_compensate3" id="selected-action-3">
 <!--            {{ formfield_errors 'punish_or_compensate1' }}-->
 <!--            {{ formfield_errors 'punish_or_compensate2' }}-->
 <!--            {{ formfield_errors 'punish_or_compensate3' }}-->
 
-            {% endif %}
-
         {% endif %}
 
+    {% endif %}
 
-        {% if "norm" in player.treatment %}
+
+    {% if "norm" in player.treatment %}
 
         {% if "2PP" in player.treatment and player.round_number < 6 %}
             <p style="text-align: center;">
@@ -722,7 +722,7 @@
         {% endfor %}
 
 
-        {% else %}
+    {% else %}
 
 <!--        {% if role_switch_true == True %}-->
 
@@ -924,13 +924,13 @@
         <br>
         </div>
 
-        {% if dic_identity != "baseline"%}
+        {% if dic_identity != "baseline" or "2PP" in player.treatment%}
             <br><br>
         {% endif %}
 
         {% endfor %}
 
-        {% endif %}
+    {% endif %}
 
 
     <div style="display: flex; justify-content: flex-end">
