--- a/demographics/Demographics.html
+++ b/demographics/Demographics.html
@@ -12,23 +12,12 @@
 
 {{ endblock }}
 
-{{ block style }}
-
-    <style>
-
-        body {
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin-top: 4vw;
-            background-color: #f4f4f4;
-        }
-
-    </style>
-
-{{ endblock }}
-
 {{ block content }}
+
+
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'shared_styles.css' %}">
+
 
     <style>
         label[for="id_born"] {
