--- a/demographics/ProlificLink.html
+++ b/demographics/ProlificLink.html
@@ -4,20 +4,13 @@
 
 {{ endblock }}
 
-{{ block style }}
-
-    body {
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin-top: 4vw;
-        background-color: #f4f4f4;
-    }
-
-{{ endblock }}
-
 
 {{ block content }}
+
+
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'shared_styles.css' %}">
+
 
 <div style="font-size: 14px">
     <p> You will shortly be redirected to Prolific to receive your payment.</p>
