--- a/rule_following/RuleFollowing.html
+++ b/rule_following/RuleFollowing.html
@@ -28,34 +28,35 @@
 
     <style>
 
-        .wrapper {
-          display: grid;
-          grid-auto-rows: minmax(40px, auto);
-          grid-template-columns: 150px 150px 50px 200x;
-          column-gap: 10px;
-          row-gap: 5px;
+        .slider {
+            width: 100%;
+            margin: 20px 0;
         }
 
-        .wrapper2 {
-          display: grid;
-          grid-template-columns: repeat(2, 1fr);
-          column-gap: 10px;
-          row-gap: 10px;
+        .slider-container {
+            width: 100%;
+            max-width: 600px;
+            margin: auto;
+            border:0px solid black;
         }
 
-        .bottom-two {
-          margin-bottom: 2cm;
-          }
+        .slider-labels {
+            display: flex;
+            justify-content: space-between;
+            margin-top: -5px; /* optional: pulls labels closer to slider */
+            padding: 0;
+        }
 
-            input[type=range] {
-                -webkit-appearance: none;
-                margin: 18px 0;
-                width: 100%;
-            }
+        .slider-labels span {
+            font-size: 16px;
+            white-space: nowrap;
+        }
 
-            input[type=range]:focus {
-                outline: none;
+        @media (max-width: 400px) { /* adjustments for tiny screens */
+            .slider-labels span {
+                font-size: 12px;
             }
+        }
 
         /* Webkit-based browsers (Chrome, Safari) */
         input[type=range]::-webkit-slider-runnable-track {
@@ -188,7 +189,7 @@
             const output = document.getElementById(outputId);
             const checkSlider = document.getElementById(checkId);
 
-            slider.value = "";
+            slider.value = "101";
             output.textContent = "";
             checkSlider.value = "0"; // Not moved yet
             slider.classList.add("hidden-thumb");
@@ -263,38 +264,44 @@
 
         <div class='responsive-div'>
 
-            <!-- Slider 1 -->
-            <div style="display: flex; justify-content: space-between; align-items: center;">
-                <span>0</span>
-                <span style="flex-grow: 1; margin: 0 10px;">
+            <!-- Slider 1-->
+            <div class="slider-container">
+                <span style="flex-grow: 1;">
                     <input type="hidden" name="slider1_moved" id="check_slider1" value="0" />
                     <input type="range" name="slider1" id="slider1" min="0" max="100" class="hidden-thumb" />
                 </span>
-                <span>100</span>
+                <div class="slider-labels">
+                    <span>0</span>
+                    <span>100</span>
+                </div>
             </div>
             <div style="text-align: center;"><output id="output1" style="color: #0d6efd"></output></div>
 
 
-            <!-- Slider 2 -->
-            <div style="display: flex; justify-content: space-between; align-items: center;">
-                <span>0</span>
-                <span style="flex-grow: 1; margin: 0 10px;">
+            <!-- Slider 2-->
+            <div class="slider-container">
+                <span style="flex-grow: 1;">
                     <input type="hidden" name="slider2_moved" id="check_slider2" value="0" />
                     <input type="range" name="slider2" id="slider2" min="0" max="100" class="hidden-thumb" />
                 </span>
-                <span>100</span>
+                <div class="slider-labels">
+                    <span>0</span>
+                    <span>100</span>
+                </div>
             </div>
             <div style="text-align: center;"><output id="output2" style="color: #0d6efd"></output></div>
 
 
-            <!-- Slider 3 -->
-            <div style="display: flex; justify-content: space-between; align-items: center;">
-                <span>0</span>
-                <span style="flex-grow: 1; margin: 0 10px;">
+            <!-- Slider 3-->
+            <div class="slider-container">
+                <span style="flex-grow: 1;">
                     <input type="hidden" name="slider3_moved" id="check_slider3" value="0" />
                     <input type="range" name="slider3" id="slider3" min="0" max="100" class="hidden-thumb" />
                 </span>
-                <span>100</span>
+                <div class="slider-labels">
+                    <span>0</span>
+                    <span>100</span>
+                </div>
             </div>
             <div style="text-align: center;"><output id="output3" style="color: #0d6efd"></output></div>
 
