made the block div a CSS and mifex padding and margins (modified the otree header)

--- a/baseline_trials/DictatorPage.html
+++ b/baseline_trials/DictatorPage.html
@@ -1,8 +1,8 @@
 {{ block title }}
 
-<p style="font-size: 22px; text-decoration: underline;">
+<div class="block-header">
     Block 1
-</p>
+</div>
 
 <p style="text-align: center; font-size: 26px;  "> Decision {{player.round_number}} </p>
 
