--- a/baseline_trials/ComprehensionQuestionPage.html
+++ b/baseline_trials/ComprehensionQuestionPage.html
@@ -1,8 +1,8 @@
 {{ block title }}
 
-<p style="font-size: 22px; text-decoration: underline;">
+<div class="block-header">
     Block 1
-</p>
+</div>
 
 <p style="text-align: center"> Knowledge check </p>
 
