--- a/baseline_trials/TPPage.html
+++ b/baseline_trials/TPPage.html
@@ -1,8 +1,8 @@
 {{ block title }}
 
-<p style="font-size: 22px; text-decoration: underline;">
+<div class="block-header">
     Block 1
-</p>
+</div>
 
 <p style="text-align: center; font-size: 26px; margin-bottom: 4px; "> Decision {{player.round_number}} </p>
 
