--- a/baseline_trials/instructionPage.html
+++ b/baseline_trials/instructionPage.html
@@ -1,9 +1,9 @@
 
 {{ block title }}
 
-<p style="font-size: 22px; text-decoration: underline;">
+<div class="block-header">
     Block 1
-</p>
+</div>
 
 <p style="text-align: center; font-size: 26px; margin-bottom: 4px; ">
     Instructions:
