--- a/crowding_out/DescriptiveNormPage.html
+++ b/crowding_out/DescriptiveNormPage.html
@@ -1,8 +1,8 @@
 {{ block title }}
 
-<p style="font-size: 22px; text-decoration: underline;">
+<div class="block-header">
     Block 2
-</p>
+</div>
 
 <p style="text-align: center; font-size: 26px;  "> Decision {{ participant.decision_page_number }} </p>
 
