--- a/dice_task/DiceRatings.html
+++ b/dice_task/DiceRatings.html
@@ -4,6 +4,15 @@
     Block 2
 </div>
 
+<p style="text-align: center; font-size: 26px;  "> Decision {{ participant.decision_page_number }} </p>
+
+<div style="display: flex; justify-content: center; margin-bottom: 4px;">
+    <label>
+        <progress value="{{ participant.progress }}" max="{{ total_pages }}">
+        </progress>
+    </label>
+</div>
+
 
 {{ endblock }}
 
