--- a/baseline_trials/instructionPage.html
+++ b/baseline_trials/instructionPage.html
@@ -1,9 +1,9 @@
 
 {{ block title }}
 
-<div class="block-subhead">
+<h2 class="block-header">
     Block 1
-</div>
+</h2>
 
 <p style="text-align: center; font-size: 26px; margin-bottom: 4px; ">
     Instructions:
