--- a/baseline_trials/instructionPage.html
+++ b/baseline_trials/instructionPage.html
@@ -1,9 +1,9 @@
 
 {{ block title }}
 
-<h2 class="block-header">
+<div class="block-header">
     Block 1
-</h2>
+</div>
 
 <p style="text-align: center; font-size: 26px; margin-bottom: 4px; ">
     Instructions:
