--- a/baseline_trials/Introduction.html
+++ b/baseline_trials/Introduction.html
@@ -24,13 +24,16 @@
 
     <p>
 <!--        Throughout the study, you will be paired with other participants who are also taking part in the study.-->
-        Throughout the study, you will be paired with other participants for decision-making. The pairings are hypothetical but based on how participants could interact.
+        Throughout the study, you will be paired with other participants for decision-making.
+        The pairings are hypothetical but based on how participants could interact.
     </p>
 
     <p>
 <!--        In addition to the compensation you receive for participating, you can receive <b> bonus points</b> based on <b>your own</b> <u>and</u> <b>other participants'</b> decisions.-->
-        In addition to the compensation you receive for participating, you can receive <b> bonus points</b> based on <b>your</b> decisions.
-        At the end of the study, the bonus points you collected will be converted into money at the following conversion rate:
+        In addition to the compensation you receive for participating,
+        you can receive <b> bonus points</b> based on <b>your</b> decisions.
+        At the end of the study,
+        the bonus points you collected will be converted into money at the following conversion rate:
     </p>
 
     <p>
@@ -46,21 +49,26 @@
     <h6><u>Block 1</u></h6>
 
      <p>
-        There are two blocks in this study: a longer first block and a shorter second block. In the first block, you will make decisions in different <b>situations</b> and in different <b>roles</b>. After the first block of decisions,
+        There are two blocks in this study: a longer first block and a shorter second block.
+         In the first block, you will make decisions in different <b>situations</b> and in different <b>roles</b>.
+         After the first block of decisions,
         <b> <u>one</u> situation</b> and <b> <u>one</u> role</b> from the first block will be randomly selected to <b>determine your bonus points</b> in the first block.
     </p>
 
       <h6><u>Block 2</u></h6>
 
     <p>
-        In the second block, you will make additional decisions in different <b>situations</b>, using your bonus points from the first block. After the second block, again
+        In the second block, you will make additional decisions in different <b>situations</b>,
+        using your bonus points from the first block. After the second block, again
         <b> <u>one</u> situation</b> will be randomly selected to <b>determine your final bonus points</b>.
     </p>
 
      <h6><u>After the study</u></h6>
 
     <p>
-        Bonus points are calculated after all participants have completed the study. They cannot be negative. Since you will not know in advance which decisions will count, you should <b>treat each decision as if it is selected</b>.
+        Bonus points are calculated after all participants have completed the study.
+        They cannot be negative. Since you will not know in advance which decisions will count,
+        you should <b>treat each decision as if it is selected</b>.
     </p>
 
     <b>
