--- a/demographics/ProlificLink.html
+++ b/demographics/ProlificLink.html
@@ -16,10 +16,10 @@
     <p> You will shortly be redirected to Prolific to receive your payment.</p>
 
     <p>If you are not redirected within 5 seconds, please click on this
-        <b><a href="hhttps://app.prolific.com/submissions/complete?cc=C11GUCA1"> https://app.prolific.com/submissions/complete?cc=C11GUCA1 </a></b>
+        <b><a href="https://app.prolific.com/submissions/complete?cc=C1B0FPN9"> https://app.prolific.com/submissions/complete?cc=C1B0FPN9 </a></b>
     </p>
     <p>
-        If the link does not work, please use this completion code: <b>C11GUCA1</b>
+        If the link does not work, please use this completion code: <b>C1B0FPN9</b>
     </p>
 
     <div style="display: flex; justify-content: flex-end">
