fixed minus sign

--- a/baseline_trials/DictatorPage.html
+++ b/baseline_trials/DictatorPage.html
@@ -334,7 +334,7 @@
                 {% endif %}
 
                 {% if "2PP" in player.treatment %}
-                    <img class="minus-button-2PP" src="/static/global/minus_button2.png" alt="-">
+                    <img class="minus-button-2PP" src="/static/global/minus_button2.png" alt="-" style="top: -50px;">
                     <img class="punish-arrow-2PP" src="/static/global/punish arrow grey.png" alt="-">
                 {% endif %}
 
@@ -443,7 +443,7 @@
                 {% endif %}
 
                 {% if "2PP" in player.treatment %}
-                    <img class="minus-button-2PP" src="/static/global/minus_button2.png" alt="-">
+                    <img class="minus-button-2PP" src="/static/global/minus_button2.png" alt="-" style="top: -50px;">
                     <img class="punish-arrow-2PP" src="/static/global/punish arrow grey.png" alt="-">
                 {% endif %}
 
