--- a/baseline_trials/TPPage.html
+++ b/baseline_trials/TPPage.html
@@ -653,7 +653,7 @@
                 {% endif %}
 
                 {% if "2PP" in player.treatment %}
-                    <img class="minus-button-2PP" src="/static/global/minus_button2.png" alt="-">
+                    <img class="minus-button-2PP" src="/static/global/minus_button2.png" alt="-" style="top: -50px;">
                     <img class="punish-arrow-2PP" src="/static/global/punish arrow grey.png" alt="-">
                 {% endif %}
 
