free rider narrative with buttons, CSS moved to global and create custom submit button CSS

--- a/baseline_trials/DictatorPage.html
+++ b/baseline_trials/DictatorPage.html
@@ -495,13 +495,8 @@
 
     {% endif %}
 
-    <div style="display: flex; justify-content: flex-end">
-        <button style="color: #fff;
-                       background-color: #007bff;
-                       border: 1px solid #007bff;
-                       font-size: 1rem;
-                       border-radius: 0.25rem;
-                       padding: 4px 12px;" type="button" id="submit-button">
+    <div class="button-container">
+        <button type="button" id="submit-button" class="submit-button">
             Next
         </button>
     </div>
