--- a/demographics/RelationalMobility.html
+++ b/demographics/RelationalMobility.html
@@ -2,78 +2,12 @@
 
     <p style="text-align: center; font-size: 26px; "> Additional questions </p>
 
-
-{{ endblock }}
-
-{{ block style }}
-
-    <style>
-
-        .question {
-            text-align: center;
-            margin-top:20px;
-            font-size: 16px;
-            font-weight: bold;
-        }
-
-        .answer-row {
-            justify-content: center;
-            display: flex;
-            margin-top:1vw;
-            left:calc(50% - 10vw);
-            /*gap: 1vw; PREVIOUS GAP WITH 30 ENDOWMENT !* Space between numbers scales with viewport width *!*/
-            gap: 0.2vw; /* Space between numbers scales with viewport width */
-            flex-wrap: wrap; /* Optional: allows wrapping if buttons exceed container width */
-            align-items: center; /* Ensures proper vertical alignment */
-        }
-
-        .answer {
-            width: 68px; /* should not scale */
-            height: 50px; /* should not scale */
-            flex-direction: column;
-            text-align: center; /* Center-aligns the text */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 14px; /* should not scale */
-            background-color: #e0e0e0;
-            padding: 1.5px;
-            border: 1.5px solid #000000;
-            border-radius: 6px; /* Slightly rounded corners */
-            cursor: pointer;
-            font-family: Arial, Helvetica, sans-serif;
-            transition: background-color 0.3s ease;
-        }
-
-        .answer:hover {
-            background-color: #ffcc00; /* Change background color on hover */
-        }
-
-        .answer:active {
-            background-color: #ffa500; /* Change background color on click */
-        }
-
-        .answer.selected {
-                 background-color: #ffa500; /* Permanent color when clicked */
-        }
-
-        .answer.disabled {
-            background-color: #F3F3F3; /* Grey color for disabled buttons */
-            border: 1px solid #d3d3d3;
-            color:#d3d3d3;
-            cursor: not-allowed;
-            pointer-events: none; /* Disable interactions */
-        }
-
-        @media (max-width: 550px) { /* adjustments for smartphones */
-            .answer {
-                width: 55px; /* should not scale */
-                height: 45px; /* should not scale */
-                font-size: 11px; /* sould not scale */
-            }
-        }
-
-    </style>
+<div style="display: flex; justify-content: center">
+    <label>
+        <progress value="{{ participant.progress }}" max="{{ total_pages }}">
+        </progress>
+    </label>
+</div>
 
 {{ endblock }}
 
@@ -262,13 +196,8 @@
 
     </div>
 
-    <div style="display: flex; justify-content: flex-end">
-        <button style="color: #fff;
-                       background-color: #007bff;
-                       border: 1px solid #007bff;
-                       font-size: 1rem;
-                       border-radius: 0.25rem;
-                       padding: 4px 12px;" type="button" id="submit-button">
+    <div class="button-container">
+        <button type="button" id="submit-button" class="submit-button">
             Next
         </button>
     </div>
