--- a/free_rider/Narratives.html
+++ b/free_rider/Narratives.html
@@ -2,6 +2,12 @@
 
 <p style="text-align: center; font-size: 26px; "> Additional questions </p>
 
+<div style="display: flex; justify-content: center; margin-bottom: 4px;">
+    <label>
+        <progress value="{{ participant.progress }}" max="{{ total_pages }}">
+        </progress>
+    </label>
+</div>
 
 {{ endblock }}
 
