--- a/rule_following/RuleFollowing.html
+++ b/rule_following/RuleFollowing.html
@@ -202,7 +202,7 @@
                 document.getElementById("error-message").style.display = "none";
 
                 const currentValue = parseInt(this.value);
-                const isOnFifty = currentValue === 50;
+                const isOnFifty = currentValue === {{ aim }};
 
                 if (isOnFifty && !slidersOnFifty.has(sliderId)) {
                     slidersOnFifty.add(sliderId);
@@ -250,16 +250,16 @@
 
         {{ if condition == 'hurt_me' }}
         <p style="text-align: center; ">
-            For each slider that you move to position “50”, you will lose {{ points_per_slider }} points.
+            For each slider that you move to position “{{ aim }}”, you will lose {{ points_per_slider }} points.
         </p>
         {{ else }}
         <p style="text-align: center; ">
-            For each slider you move to position "50", another participant in this study will lose {{ points_per_slider }} points.
+            For each slider you move to position "{{ aim }}", another participant in this study will lose {{ points_per_slider }} points.
         </p>
         {{ endif }}
 
         <p style="text-align: center; ">
-            <b> The rule of this task is to move each slider to position “50”. </b>
+            <b> The rule of this task is to move each slider to position “{{ aim }}”. </b>
         </p>
         <br>
 
