now the texts with tags inside work! dynamic text changes next to check

--- a/baseline_trials/Consent.html
+++ b/baseline_trials/Consent.html
@@ -74,7 +74,7 @@
 
       <h6><u>Payment</u></h6>
 
-      {{ consent_payment }}
+      {{ consent_payment|safe }}
 
       <h6><u>Additional information</u></h6>
 
